# maeel

./: .gitignore  Cargo.toml  Makefile  README.md  c.sh  compile.py  compile.sh  compiler.py  conc2ast.py  cp_m1.sh  examples.maeel  hello.mae  hello.maeel  hello.py  maeel.maeel  maeel.ml  maeel.rs  maeel.vim  maeelc.rs  maeellex  maeellex.py  maeellex.rs  maeells.rs  main.maeel  minimaeel.maeel  rpn2infix.ml  rustfmt.toml  stack.py  tests.maeel
benches/: pop_benchmark.rs
docs/: 1_VARIABLES.md  2_FUNCTIONS.md  OPTIMIZATION.md  README.md  READMEb.md  Z_TESTS.md
examples/: 00_hello.maeel  01_variables.maeel  02_arith.maeel  03_stack.maeel  04_functions.maeel  05_conds.maeel  06_loops.maeel  07_arrays.maeel  08_fib.maeel  09_bad_types.maeel  1_hello.maeel  2_hellostd.maeel  3_hellofun.maeel  3x+1.maeel  4_arithmetics.maeel  5_fibonacci.maeel  6_sierpinski.maeel  7_abs.maeel  absolute_value.maeel  array.maeel  arrays.maeel  assert.maeel  collatz.maeel  conditions.maeel  decomp_primes.maeel  factorial.maeel  fib.maeel  fibonacci.maeel  fizz-buzz.maeel  gcd.maeel  hello.maeel  hieron.maeel  lexer.maeel  log.maeel  logic.maeel  maths.maeel  os_M1.maeel  pi.maeel  pow.maeel  prime_factors.maeel  (+18 more)
ide/: language-configuration.json
interpreter/: Cargo.toml
lexer/: Cargo.toml
maeel-language/: CHANGELOG.md  README.md  language-configuration.json  package.json
maeel-syntax-highlighting/: package.json
maeel_common/: Cargo.toml  factorial.maeel
maeel_compiler/: Cargo.toml
maeel_compiler/src/: main.rs
maeel_web/: Cargo.toml  index.html
maeel_web/src/: main.rs
(+149 files in other folders)
