[package]
name = "maeel"
version = "0.1.0"
edition = "2021"
default-run = "maeel"

[dependencies]
maeel_lexer = { path = "../maeel_lexer" }
maeel_interpreter = { path = "../maeel_interpreter" }
maeel_common = { path = "../maeel_common" }
maeel_parser = { path = "../maeel_parser" }
serde = "1.0.154"
serde_derive = "1.0.154"
serde_json = "1.0.94"
