[package]
name = "maeel_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = "0.3.61"

maeel_lexer = { path = "../maeel_lexer" }
maeel_interpreter = { path = "../maeel_interpreter" }
maeel_common = { path = "../maeel_common" }